// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleDropdown should render correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -4px;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  padding-right: 20px;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<SingleDropdown
  capitalize={false}
  italic={false}
  items={
    Array [
      Object {
        "text": "Item1",
        "value": 1,
      },
      Object {
        "text": "Item2",
        "value": 2,
      },
      Object {
        "text": "Item3",
        "value": 3,
      },
      Object {
        "text": "Item4",
        "value": 4,
      },
      Object {
        "text": "Item5",
        "value": 5,
      },
      Object {
        "text": "Item6",
        "value": 6,
      },
      Object {
        "text": "Item7",
        "value": 7,
      },
      Object {
        "text": "Item8",
        "value": 8,
      },
      Object {
        "text": "Item9",
        "value": 9,
      },
    ]
  }
  onChange={[MockFunction]}
  size="1rem"
  uppercase={false}
  weight={300}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <styled.select
        capitalize={false}
        italic={false}
        onChange={[MockFunction]}
        size="1rem"
        uppercase={false}
        weight={300}
      >
        <select
          className="c1"
          onChange={[MockFunction]}
          size="1rem"
        >
          <option
            key="1"
            value={1}
          >
            Item1
          </option>
          <option
            key="2"
            value={2}
          >
            Item2
          </option>
          <option
            key="3"
            value={3}
          >
            Item3
          </option>
          <option
            key="4"
            value={4}
          >
            Item4
          </option>
          <option
            key="5"
            value={5}
          >
            Item5
          </option>
          <option
            key="6"
            value={6}
          >
            Item6
          </option>
          <option
            key="7"
            value={7}
          >
            Item7
          </option>
          <option
            key="8"
            value={8}
          >
            Item8
          </option>
          <option
            key="9"
            value={9}
          >
            Item9
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</SingleDropdown>
`;

exports[`SingleDropdown should render correctly with capitalize 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -4px;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  padding-right: 20px;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: capitalize;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<SingleDropdown
  capitalize={true}
  italic={false}
  items={
    Array [
      Object {
        "text": "Item1",
        "value": 1,
      },
      Object {
        "text": "Item2",
        "value": 2,
      },
      Object {
        "text": "Item3",
        "value": 3,
      },
      Object {
        "text": "Item4",
        "value": 4,
      },
      Object {
        "text": "Item5",
        "value": 5,
      },
      Object {
        "text": "Item6",
        "value": 6,
      },
      Object {
        "text": "Item7",
        "value": 7,
      },
      Object {
        "text": "Item8",
        "value": 8,
      },
      Object {
        "text": "Item9",
        "value": 9,
      },
    ]
  }
  onChange={[MockFunction]}
  size="1rem"
  uppercase={false}
  weight={300}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <styled.select
        capitalize={true}
        italic={false}
        onChange={[MockFunction]}
        size="1rem"
        uppercase={false}
        weight={300}
      >
        <select
          className="c1"
          onChange={[MockFunction]}
          size="1rem"
        >
          <option
            key="1"
            value={1}
          >
            Item1
          </option>
          <option
            key="2"
            value={2}
          >
            Item2
          </option>
          <option
            key="3"
            value={3}
          >
            Item3
          </option>
          <option
            key="4"
            value={4}
          >
            Item4
          </option>
          <option
            key="5"
            value={5}
          >
            Item5
          </option>
          <option
            key="6"
            value={6}
          >
            Item6
          </option>
          <option
            key="7"
            value={7}
          >
            Item7
          </option>
          <option
            key="8"
            value={8}
          >
            Item8
          </option>
          <option
            key="9"
            value={9}
          >
            Item9
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</SingleDropdown>
`;

exports[`SingleDropdown should render correctly with italic 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -4px;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  padding-right: 20px;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: none;
  font-style: italic;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<SingleDropdown
  capitalize={false}
  italic={true}
  items={
    Array [
      Object {
        "text": "Item1",
        "value": 1,
      },
      Object {
        "text": "Item2",
        "value": 2,
      },
      Object {
        "text": "Item3",
        "value": 3,
      },
      Object {
        "text": "Item4",
        "value": 4,
      },
      Object {
        "text": "Item5",
        "value": 5,
      },
      Object {
        "text": "Item6",
        "value": 6,
      },
      Object {
        "text": "Item7",
        "value": 7,
      },
      Object {
        "text": "Item8",
        "value": 8,
      },
      Object {
        "text": "Item9",
        "value": 9,
      },
    ]
  }
  onChange={[MockFunction]}
  size="1rem"
  uppercase={false}
  weight={300}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <styled.select
        capitalize={false}
        italic={true}
        onChange={[MockFunction]}
        size="1rem"
        uppercase={false}
        weight={300}
      >
        <select
          className="c1"
          onChange={[MockFunction]}
          size="1rem"
        >
          <option
            key="1"
            value={1}
          >
            Item1
          </option>
          <option
            key="2"
            value={2}
          >
            Item2
          </option>
          <option
            key="3"
            value={3}
          >
            Item3
          </option>
          <option
            key="4"
            value={4}
          >
            Item4
          </option>
          <option
            key="5"
            value={5}
          >
            Item5
          </option>
          <option
            key="6"
            value={6}
          >
            Item6
          </option>
          <option
            key="7"
            value={7}
          >
            Item7
          </option>
          <option
            key="8"
            value={8}
          >
            Item8
          </option>
          <option
            key="9"
            value={9}
          >
            Item9
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</SingleDropdown>
`;

exports[`SingleDropdown should render correctly with size 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -4px;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  padding-right: 20px;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 32px;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<SingleDropdown
  capitalize={false}
  italic={false}
  items={
    Array [
      Object {
        "text": "Item1",
        "value": 1,
      },
      Object {
        "text": "Item2",
        "value": 2,
      },
      Object {
        "text": "Item3",
        "value": 3,
      },
      Object {
        "text": "Item4",
        "value": 4,
      },
      Object {
        "text": "Item5",
        "value": 5,
      },
      Object {
        "text": "Item6",
        "value": 6,
      },
      Object {
        "text": "Item7",
        "value": 7,
      },
      Object {
        "text": "Item8",
        "value": 8,
      },
      Object {
        "text": "Item9",
        "value": 9,
      },
    ]
  }
  onChange={[MockFunction]}
  size="32px"
  uppercase={false}
  weight={300}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <styled.select
        capitalize={false}
        italic={false}
        onChange={[MockFunction]}
        size="32px"
        uppercase={false}
        weight={300}
      >
        <select
          className="c1"
          onChange={[MockFunction]}
          size="32px"
        >
          <option
            key="1"
            value={1}
          >
            Item1
          </option>
          <option
            key="2"
            value={2}
          >
            Item2
          </option>
          <option
            key="3"
            value={3}
          >
            Item3
          </option>
          <option
            key="4"
            value={4}
          >
            Item4
          </option>
          <option
            key="5"
            value={5}
          >
            Item5
          </option>
          <option
            key="6"
            value={6}
          >
            Item6
          </option>
          <option
            key="7"
            value={7}
          >
            Item7
          </option>
          <option
            key="8"
            value={8}
          >
            Item8
          </option>
          <option
            key="9"
            value={9}
          >
            Item9
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</SingleDropdown>
`;

exports[`SingleDropdown should render correctly with uppercase 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -4px;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  padding-right: 20px;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: uppercase;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<SingleDropdown
  capitalize={false}
  italic={false}
  items={
    Array [
      Object {
        "text": "Item1",
        "value": 1,
      },
      Object {
        "text": "Item2",
        "value": 2,
      },
      Object {
        "text": "Item3",
        "value": 3,
      },
      Object {
        "text": "Item4",
        "value": 4,
      },
      Object {
        "text": "Item5",
        "value": 5,
      },
      Object {
        "text": "Item6",
        "value": 6,
      },
      Object {
        "text": "Item7",
        "value": 7,
      },
      Object {
        "text": "Item8",
        "value": 8,
      },
      Object {
        "text": "Item9",
        "value": 9,
      },
    ]
  }
  onChange={[MockFunction]}
  size="1rem"
  uppercase={true}
  weight={300}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <styled.select
        capitalize={false}
        italic={false}
        onChange={[MockFunction]}
        size="1rem"
        uppercase={true}
        weight={300}
      >
        <select
          className="c1"
          onChange={[MockFunction]}
          size="1rem"
        >
          <option
            key="1"
            value={1}
          >
            Item1
          </option>
          <option
            key="2"
            value={2}
          >
            Item2
          </option>
          <option
            key="3"
            value={3}
          >
            Item3
          </option>
          <option
            key="4"
            value={4}
          >
            Item4
          </option>
          <option
            key="5"
            value={5}
          >
            Item5
          </option>
          <option
            key="6"
            value={6}
          >
            Item6
          </option>
          <option
            key="7"
            value={7}
          >
            Item7
          </option>
          <option
            key="8"
            value={8}
          >
            Item8
          </option>
          <option
            key="9"
            value={9}
          >
            Item9
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</SingleDropdown>
`;

exports[`SingleDropdown should render correctly with weight 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -4px;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  padding-right: 20px;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 500;
  text-transform: none;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<SingleDropdown
  capitalize={false}
  italic={false}
  items={
    Array [
      Object {
        "text": "Item1",
        "value": 1,
      },
      Object {
        "text": "Item2",
        "value": 2,
      },
      Object {
        "text": "Item3",
        "value": 3,
      },
      Object {
        "text": "Item4",
        "value": 4,
      },
      Object {
        "text": "Item5",
        "value": 5,
      },
      Object {
        "text": "Item6",
        "value": 6,
      },
      Object {
        "text": "Item7",
        "value": 7,
      },
      Object {
        "text": "Item8",
        "value": 8,
      },
      Object {
        "text": "Item9",
        "value": 9,
      },
    ]
  }
  onChange={[MockFunction]}
  size="1rem"
  uppercase={false}
  weight={500}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <styled.select
        capitalize={false}
        italic={false}
        onChange={[MockFunction]}
        size="1rem"
        uppercase={false}
        weight={500}
      >
        <select
          className="c1"
          onChange={[MockFunction]}
          size="1rem"
        >
          <option
            key="1"
            value={1}
          >
            Item1
          </option>
          <option
            key="2"
            value={2}
          >
            Item2
          </option>
          <option
            key="3"
            value={3}
          >
            Item3
          </option>
          <option
            key="4"
            value={4}
          >
            Item4
          </option>
          <option
            key="5"
            value={5}
          >
            Item5
          </option>
          <option
            key="6"
            value={6}
          >
            Item6
          </option>
          <option
            key="7"
            value={7}
          >
            Item7
          </option>
          <option
            key="8"
            value={8}
          >
            Item8
          </option>
          <option
            key="9"
            value={9}
          >
            Item9
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</SingleDropdown>
`;
